--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   gtag('config', 'G-820YBJWJCY');
 </script>
+<meta name="google-site-verification" content="oCXI466BWlTg4kjn-JVXo-d-nURbjjBxJfJgM4rMOuU" />
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
