--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-820YBJWJCY"></script>
+<meta name="google-site-verification" content="AaZvdoPxNVlrSbx78E2laOij8rXcFQCV1Q5qC1tg_8E" />
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
